# courtvision

./: .env  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  README.md  court_geometry.excalidraw  courtvision.code-workspace  dev_setup.sh  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.dvc/: config
.github/workflows/: documentation.yml  release.yml  tests.yml
api/config/: index.html
api/console/: index.html
api/data/: index.html
api/geometry/: index.html
api/models/: index.html
api/pipeline/: index.html
api/swiss/: index.html
api/trackers/: index.html
api/trainer/: index.html
api/vision/: index.html
big_data_raw/: .gitignore  0000.dvc  0001.dvc  0002.dvc
big_data_raw/0000/: metadata.json
courtvision/: config.py  console.py  data.py  geometry.py  models.py  pipeline.py  swiss.py  trackers.py  trainer.py  vis.py
courtvision_balldetector/: Dockerfile  README.md  _wsgi.py  balldetector.py  docker-compose.yml  requirements.txt  supervisord.conf  uwsgi.ini
courtvision_balldetector/balldetector_backend/: README.md
courtvision_balldetector/data/labelstudiodata/: label_studio.sqlite3
datasets/: ball_coco.yml  ball_yolo.yml
datasets/calibrations/v1/: 24_error_11.11_calibration.npz
docs/: index.md
docs/api/: config.md  console.md  data.md  geometry.md  models.md  pipeline.md  swiss.md  trackers.md  trainer.md  vision.md
docs/paper/: export.bib  main.typ
docs/presentation/: TTF.ipynb  TTF.slides.html  the_path.excalidraw  the_puzzle.excalidraw  the_puzzle_bottom.excalidraw  the_puzzle_top.excalidraw  tinker_eng_sci.excalidraw
labelstudiodata/: label_studio.sqlite3
notebooks/: 3d_mappings.ipynb  3d_tracker.ipynb  CalibrateCourtCamera.ipynb  CameraCalibartionErrors.ipynb  Geometry.ipynb  OptGeometry.ipynb  TTF.slides.html  audio_splitter.ipynb  ball_tracker.ipynb  box_pose.ipynb  clip_segmentation.ipynb  dataloader.ipynb  image_to_scene.ipynb  linedetection.ipynb  llm.ipynb  pipeline.ipynb  pipeline_vis.ipynb  player_tracks.ipynb  register_images.ipynb  sam.ipynb  scene_understanding.ipynb  yolo_ball.ipynb
paper/: export.bib  main.typ  template.typ  the_puzzle_bottom.excalidraw
paper/images/: train_eval_label.excalidraw
presentation/: TTF.ipynb  the_path.excalidraw  the_puzzle.excalidraw  tinker_eng_sci.excalidraw
scripts/: downloader.py  grab_frames.py  labeller.sh  labeller_all.sh  ttf.sh  ytdownloader.py
search/: search_index.json
tests/: test_trackers.py
