[tool.poetry]
name = "courtvision"
version = "0.1.0"
description = ""
authors = ["benjamin <benjamin@thinkst.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
cv-grab-frames = 'courtvision.console:grab_frames_from_clips'

[tool.poetry.dependencies]
python = "^3.10"
imageio = "^2.27.0"
black = {extras = ["jupyter"], version = "^23.3.0"}
numpy = "^1.24.2"
# TODO: this is a macosx_11_0_arm64 only wheel!

pytorch-lightning = "^2.0.1.post0"
pydantic = "^1.10.7"
av = "^10.0.0"
pytube = "15.0.0"
structlog = "^23.1.0"
wandb = "^0.15.4"
torchvision = "^0.15.2"


[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.0.6"
black = "^23.3.0"

lap = {path = "/Users/benjamindecharmoy/projects/lap/dist/lap-0.5.dev0-cp311-cp311-macosx_11_0_arm64.whl"}


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
install = "^1.3.5"
mkdocs-material = "^9.1.15"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-literate-nav = "^0.6.0"


[tool.poetry.group.cli.dependencies]
typer = "^0.9.0"
rich = "^13.4.2"
textual = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
